--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.9",
+    "gray-matter": "^4.0.3",
+    "highlight.js": "^11.6.0",
+    "marked": "^4.1.1",
     "next": "12.3.1",
+    "next-mdx-remote": "^4.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
